fix landscape display on mobile

--- a/css/agency.css
+++ b/css/agency.css
@@ -325,7 +325,7 @@ header .intro-text .intro-heading {
         height: 100vh;
     }
     header .intro-text {
-        padding-top: 100px;
+        padding-top: 250px;
         padding-bottom: 50px;
         color: #fff;
     }
